force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Phenotype_Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Received__c</fullName>
    <label>Phenotype Data Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
                <isActive>false</isActive>
                <label>Not Received</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>