force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Phenotype_Data_Structure_Transfer_Appr__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Structure_Transfer_Appr__c</fullName>
    <label>Phenotype Data Structure &amp; Transfer Appr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>