force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Phenotype_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Matrix__c</fullName>
    <description>Formerly Phenotype Matrix JG 09.02.20</description>
    <label>Phenotype Matrices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>