force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Primary_Collaboration_Institution_Flag__c.field-meta.xml
<CustomField>
    <fullName>Primary_Collaboration_Institution_Flag__c</fullName>
    <formula>IF( Collaborator_Institution__r.Id  ==  Collaboration_Opportunity__r.AccountId, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>