force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Primary_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_email__c</fullName>
    <label>Primary email</label>
    <type>Email</type>
</CustomField>