force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Primary_fax__c.field-meta.xml
<CustomField>
    <fullName>Primary_fax__c</fullName>
    <label>Primary fax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>