force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Proceed_Based_on_Initial_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Proceed_Based_on_Initial_Assessment__c</fullName>
    <description>Formerly Proceed Based on Initial Assessment JG 09.02.20</description>
    <label>Assessment Completed Date</label>
    <type>Date</type>
</CustomField>