force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Proceed_Based_on_research_plan__c.field-meta.xml
<CustomField>
    <fullName>Proceed_Based_on_research_plan__c</fullName>
    <description>Formerly Proceed Based on Research Plan JG 09.02.20</description>
    <label>Research Plan Reviewed at ROP Date</label>
    <type>Date</type>
</CustomField>