force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/RCA_Agreement__c.field-meta.xml
<CustomField>
    <fullName>RCA_Agreement__c</fullName>
    <description>Formerly RCA Agreement JG 09.02.20</description>
    <label>RCA Terms &amp; Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>