force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/RCA_Ready_for_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>RCA_Ready_for_Legal_Review__c</fullName>
    <description>Formerly RCA Ready for Legal Review JG 09.02.20</description>
    <label>RCA Finalized Date</label>
    <type>Date</type>
</CustomField>