force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/RCA_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>RCA_Signature_Date__c</fullName>
    <label>RCA Signature Date</label>
    <type>Date</type>
</CustomField>