force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Ready_to_Send_Tubes__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Send_Tubes__c</fullName>
    <description>Formerly Ready to Send Tubes JG 09.02.20</description>
    <label>Tubes Sent to Collaborator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>