force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Research_Plan_Approved_by_RGC__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Approved_by_RGC__c</fullName>
    <label>Research Plan Approved by RGC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>