force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Research_Plan_Developed_Date__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Developed_Date__c</fullName>
    <label>Research Plan Developed Date</label>
    <type>Date</type>
</CustomField>