force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Research_Plan_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Finalized__c</fullName>
    <description>Formerly Research Plan Finalized JG 09.02.20</description>
    <label>Final Research Plan Completed Date</label>
    <type>Date</type>
</CustomField>