force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Research_Plan_Reviewed_at_ROP__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Reviewed_at_ROP__c</fullName>
    <label>Research Plan Reviewed at ROP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
                <label>Not Reviewed</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Need More Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>