force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Sample_Requirements_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requirements_Approved__c</fullName>
    <label>Sample Requirements Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>