force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Samples_Total__c.field-meta.xml
<CustomField>
    <fullName>Samples_Total__c</fullName>
    <formula>Total_Cases__c + Total_Controls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # Committed (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>