force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet__c</fullName>
    <label>Negotiate Term Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>