force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Term_Sheet_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Agreed__c</fullName>
    <description>Formerly Term Sheet Agreed JG 09.02.20</description>
    <label>Term Sheet Agreed Date</label>
    <type>Date</type>
</CustomField>