force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Term_Sheet_agreed_by_RGC_LT__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_agreed_by_RGC_LT__c</fullName>
    <description>Formerly Term Sheet agreed by RGC LT JG 09.02.20</description>
    <label>Term Sheet Agreed by RGC LT Date</label>
    <type>Date</type>
</CustomField>