force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Archived__c.field-meta.xml
<CustomField>
    <fullName>Total_Archived__c</fullName>
    <formula>Cases_Archived__c + Controls_Archived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Archived (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>