force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Archived_RGN_Archived__c.field-meta.xml
<CustomField>
    <fullName>Total_Archived_RGN_Archived__c</fullName>
    <label>Total Archived (RGN Archived) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>