force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <formula>Cases_Archived__c + Cases_Prospective__c + Cases_Archived_RGN_Archived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # Cases (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>