force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Committed__c.field-meta.xml
<CustomField>
    <fullName>Total_Committed__c</fullName>
    <formula>Total_Cases_Committed__c + Total_Controls_Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Committed (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>