force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Controls__c.field-meta.xml
<CustomField>
    <fullName>Total_Controls__c</fullName>
    <formula>Controls_Archived__c + Controls_Prospective__c + Controls_Archived_RGN_Archived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # Controls (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>