force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Controls_Committed__c.field-meta.xml
<CustomField>
    <fullName>Total_Controls_Committed__c</fullName>
    <formula>Controls_Archived__c + Controls_Prospective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Controls (Committed) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>