force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Cost_RGC_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_RGC_Proposed__c</fullName>
    <label>Total Cost - RGC Proposed (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>