force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Prospective__c.field-meta.xml
<CustomField>
    <fullName>Total_Prospective__c</fullName>
    <formula>Cases_Prospective__c + Controls_Prospective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Prospective (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>