force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Total_Samples_or_of_Families__c.field-meta.xml
<CustomField>
    <fullName>Total_Samples_or_of_Families__c</fullName>
    <label>Total # Samples or # of Families</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>