force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Uploaded_to_Results_Browser__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_Results_Browser__c</fullName>
    <label>Uploaded to Results Browser</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>