force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/US_Non_US_Formula__c.field-meta.xml
<CustomField>
    <fullName>US_Non_US_Formula__c</fullName>
    <formula>TEXT( Collaborator_Institution__r.US_Non_US__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US/Non-US</label>
    <type>Text</type>
</CustomField>