force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>